# piano-finger-placement

./: LICENSE  README.md  Sonate No. 14 Moonlight 3rd Movement.musicxml  pyproject.toml
piano_fingering/: __init__.py  config.py  constants.py  types.py
src/annotate/: notes.py
src/cli/: main.py
src/decoding/: second_order_dp.py
src/features/: geometry.py  patterns.py
src/io/: musicxml.py
src/pfai/: __init__.py  config.py  constants.py  types.py
src/rules/: costs.py
tests/: conftest.py  test_decoding.py  test_leap_annotations.py  test_smoke.py
