[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano-fingering"
version = "0.1.0"
description = "Hybrid rule+DP model to auto-finger piano MusicXML scores with rollover priorities and pedagogical notes."
authors = [{ name = "Samuel Ray" }]
requires-python = ">=3.9"
dependencies = [
  "music21>=9.1.0",
  "numpy>=1.24",
  "typing_extensions>=4.7"
]

[project.scripts]
piano-fingering = "piano_fingering.cli.main:app"